# treehacks2026

./: .env.example  .gitignore  MODELS_SETUP.md  PREPARE_FOR_PUBLIC.md  README.md  SECURITY_CHECKLIST.md  cleanup_for_public.sh  index.html  robot-manual.md
docs/: ARCHITECTURE.md  STARTUP_GUIDE.md
himpublic-py/: .env.example  .gitignore  LICENSE  PDF_SETUP.md  PRE_FLIGHT_CHECKLIST.md  README.md  pyproject.toml  quick_test.sh  requirements.txt  robot_run.sh  robot_run_v2.sh  run_robot.sh  setup_robot.sh  start_demo.sh  test_report.py
himpublic-py/artifacts/sessions/6b3e3813-4042-4e53-81d5-d520fae98798/: report.json  report.md
himpublic-py/artifacts/sessions/da7135ee-e147-446d-ab82-d759c8a7f1be/: report.json  report.md
himpublic-py/artifacts/sessions/sample_session_001/: evidence.jsonl
himpublic-py/artifacts/sessions/sample_session_001/reports/: medical_report.md
himpublic-py/assets/: README.md
himpublic-py/assets/booster-docs/: booster-k1-main.md
himpublic-py/code/: RUN_DEMO_COMMANDS.txt  adam_reacts.py  adam_reacts_gamepad.py  elevenlabs_stream.py  final_demo.py  generate_audio.py  hardcoded_demo.py  k1_audio.py  motion_capture.py  openai_stt.py  quick_test.py  realtime_voice.py  requirements.txt  run_robot_demo.sh  sports_responder.py  test_connection.py  test_gamepad.py  voice_tts.py  walk_demo.py  walk_demo0v2.py  walk_demo_v2.py  walk_demo_v4.py  walk_demo_v5.py
himpublic-py/docs/: ARCHITECTURE.md  CHANGELOG.md  COMMAND_CENTER_AND_MEDICAL_REPORT.md  DEV_GUIDE.md  MEDICAL_REPORT_SPEC.md  PIPELINE.md  PIPELINE_OVERVIEW.md  ROBOT_INTEGRATION.md  system_prompt.md
himpublic-py/legacy/: Dockerfile  README.md  booster.ipynb  camera_mode.sh  create-env.sh  fight_mode.sh
himpublic-py/legacy/booster_python_client/: __main__.py  actions.py  fingerbot.py  helpers.py  joints.py  lib.py  state_machine.py  types.py
himpublic-py/legacy/playground/: robot.ipynb
himpublic-py/legacy/scripts/: fight_mode.py
himpublic-py/legacy/sdk/: CMakeLists.txt  build.sh  install.sh
himpublic-py/legacy/sdk/include/booster/robot/b1/: b1_api_const.hpp
himpublic-py/legacy/sdk/python/: binding.cpp
himpublic-py/legacy/startup/: fight-mode.service  install-service.sh
himpublic-py/missions/smoke_001/: results.json
himpublic-py/reports/: triage_20260214_202223.md  triage_20260214_203826.md
himpublic-py/scripts/: generate_medical_report_sample.py  report_demo.py  run_command_center.py  run_search_demo.py  smoke_test_robot.py
himpublic-py/src/himpublic/: __init__.py  main.py
himpublic-py/src/himpublic/audio/: __init__.py  asr.py  sound_localization.py  tts.py
himpublic-py/src/himpublic/chatbot/: __init__.py  medical_chatbot.py  question_policy.py  triage_rules.py
himpublic-py/src/himpublic/comms/: __init__.py  command_center_client.py  command_center_server.py
himpublic-py/src/himpublic/evidence/: __init__.py  evidence_log.py
himpublic-py/src/himpublic/io/: __init__.py  audio_io.py  booster_adapter.py  mock_robot.py  robot_client.py  robot_interface.py  ros2_bridge.py  video_source.py
himpublic-py/src/himpublic/medical/: __init__.py  evidence_collector.py  medical_assessor.py  question_planner.py  report_builder.py  report_schema.py  schemas.py  triage_pipeline.py  triage_priority.py
himpublic-py/src/himpublic/medical/templates/: triage_report.md.j2  triage_report_speech_first.md.j2
himpublic-py/src/himpublic/orchestrator/: __init__.py  agent.py  config.py  dialogue_manager.py  events.py  guardrails.py  llm_adapter.py  medic_dialogue.py  phases.py  placeholders.py  policy.py  search_phase.py  state_machine.py  triage_linear_runner_v2.py  triage_parse.py  triage_script.py  triage_script_v2.py
himpublic-py/src/himpublic/perception/: __init__.py  audio_scanner.py  frame_store.py  injury_detector.py  openvocab.py  person_detector.py  rubble_detector.py  types.py
himpublic-py/src/himpublic/pipeline/: __init__.py  __main__.py  cli.py  engine.py  phases.py
himpublic-py/src/himpublic/planner/: __init__.py  executor.py  llm_planner.py  schema.py
himpublic-py/src/himpublic/reporting/: __init__.py  artifact_store.py  document_builder.py  image_annotator.py  render_medical_report.py  report_builder.py  report_schema.py  types.py
himpublic-py/src/himpublic/tools/: __init__.py  convert_reports_to_pdf.py  demo_medical.py  run_medical_voice_demo.py  test_openvocab.py  test_planner.py
himpublic-py/src/himpublic/utils/: event_logger.py  logging.py  md_to_pdf.py
himpublic-py/src/robot_bridge/: __init__.py  requirements.txt  server.py
himpublic-py/static/: index.html
himpublic-py/tests/: __init__.py  test_dialogue_manager.py  test_medical_report.py  test_orchestrator.py  test_pipeline.py
himpublic-py/week1/: plan.md
himpublic-py/week2/: plan.md
himpublic-py/week3/: plan.md
no-robot-sim/: README.md
webapp/: .env.example  index.html  (+3 more)
(+38 files in other folders)
